1.add plugin auto download feature 2.code optimize